# Repo1

./: CMakeLists.txt  STM32F103C8Tx_FLASH.ld  ToggelingLed.elf  Token.txt  Tokens.txt  URLs.txt  gettingStartedWithPython.txt  how to install slcan.txt  install Clang-LLVM.txt  main.c  project1STM32F103C8.elf  projectFirstTry.pdsprj
ACCU3/: .gitignore  ACCU3.ioc  CMakeLists.txt
OBD/: .gitlab-ci.yml  CMakeLists.txt  Doxyfile  OBD_Project.ioc  README.md
OBD/CI_Scripts/: CD_Script.py  CodeCount.py  LintingCheck.py  MisraCheck.py  UnitTest.py  build.py
OBD/Core/App/AlarmApp/: project.yml
OBD/Core/App/AlarmApp/src/: AlarmApp.c  AlarmApp.h  AlarmAppCnfg.h
OBD/Core/App/AlarmApp/test/: test_AlarmApp.c
OBD/Core/App/LowPowerApp/: project.yml
OBD/Core/App/LowPowerApp/src/: LowPowerApp.c  LowPowerApp.h  LowPowerAppCnfg.h
OBD/Core/App/LowPowerApp/test/: test_LowPowerApp.c
OBD/Core/App/MonitoringApp/: project.yml
OBD/Core/App/MonitoringApp/src/: MonitoringApp.c  MonitoringApp.h  MonitoringAppCnfg.h
OBD/Core/App/MonitoringApp/test/: test_MonitoringApp.c
OBD/Core/App/QueueInterface/: QueueInterface.c  QueueInterface.h
OBD/Core/App/Vehicle_App/: project.yml
OBD/Core/App/Vehicle_App/src/: VehicleDataTypes.h  Vehicle_App.c  Vehicle_App.h
OBD/Core/App/Vehicle_App/test/: test_VehicleApp.c
OBD/Core/App/Wireless_App/: project.yml
OBD/Core/App/Wireless_App/src/: Wireless_App.c  Wireless_App.h
OBD/Core/FreeRTOSfiles/: FreeRTOSConfig.h
OBD/Core/FreeRTOSfiles/ARM_CM3_MPU/: port.c
OBD/Core/FreeRTOSfiles/source/: tasks.c
OBD/Core/HAL/Battery/: project.yml
OBD/Core/HAL/Battery/src/: Battery.c  Battery.h
OBD/Core/HAL/Battery/test/: test_Battery.c
OBD/Core/HAL/BitsManager/: project.yml
OBD/Core/HAL/BitsManager/src/: BitsManager.c  BitsManager.h  BitsManagerTestFile.txt
OBD/Core/HAL/BitsManager/test/: test_BitsManager.c
OBD/Core/HAL/Bluetooth_Driver/: project.yml
OBD/Core/HAL/Bluetooth_Driver/src/: BluetoothCommands.c  BluetoothCommands.h  BluetoothDrv.c  BluetoothDrv.h  Bluetooth_MCAL_Interface.c  Bluetooth_MCAL_Interface.h
OBD/Core/HAL/Bluetooth_Driver/test/: test_BlueetoothDriver.c  test_BluetoothCommands.c
OBD/Core/HAL/Buzzer_Driver/: project.yml
OBD/Core/HAL/Buzzer_Driver/src/: BuzzerDriver.c  BuzzerDriver.h  BuzzerDriverCnfg.h
OBD/Core/HAL/Buzzer_Driver/test/: test_BuzzerDriver.c
OBD/Core/HAL/CRS/: project.yml
OBD/Core/HAL/CRS/src/: CRS.c  CRS.h
OBD/Core/HAL/CRS/test/: test_CRS.c
OBD/Core/HAL/External_Eeprom/src/: ExtI2cEeprom.c  ExtI2cEeprom.h
OBD/Core/HAL/LED_Driver/src/: LEDDriver.c  LEDDriver.h  LEDDriverCnfg.h
OBD/Core/HAL/LED_Driver/test/: test_LEDDriver.c
OBD/Core/HAL/Mqtt_Driver/: project.yml
OBD/Core/HAL/Mqtt_Driver/src/: MQTTCommon.h  MQTTConnect.h  MQTTFormat.h  MQTTPacket.h  MQTTPublish.h  MQTTSerializePublish.c  MQTTSim800.c  MQTTSim800.h  MQTTSubscribe.h  MQTTUnsubscribe.h  MQTT_Mcal_Interface.c  MQTT_Mcal_Interface.h  SIM800Handling.c  SIM800Handling.h
OBD/Core/HAL/Mqtt_Driver/test/: test_MqttDriver.c
OBD/Core/HAL/TPS/: project.yml
OBD/Core/HAL/TPS/src/: TPS.c  TPS.h
OBD/Core/HAL/TPS/test/: test_TPS.c
OBD/Core/Inc/: main.h  stm32f1xx_hal_conf.h
OBD/Core/MCAL/ADC/: project.yml
OBD/Core/MCAL/ADC/src/: ADC.c  ADC.h
OBD/Core/MCAL/ADC/test/: test_ADC.c
OBD/Core/MCAL/CanDriver/: Can.c  Can.h  CanCnfg.h
OBD/Core/MCAL/CmsisAbstract/src/: CmsisAbstract.c  CmsisAbstract.h
OBD/Core/MCAL/GPIO/: project.yml
OBD/Core/MCAL/GPIO/src/: GPIO.c  GPIO.h
OBD/Core/MCAL/GPIO/test/: test_GPIO.c
OBD/Core/MCAL/I2C/: project.yml
OBD/Core/MCAL/I2C/src/: I2C.c  I2C.h
OBD/Core/MCAL/I2C/test/: test_I2C.c
OBD/Core/MCAL/MCU/: project.yml
OBD/Core/MCAL/MCU/src/: Mcu.c  Mcu.h
OBD/Core/MCAL/MCU/test/: test_Mcu.c
OBD/Core/MCAL/TIMER/src/: Timer.c  Timer.h
OBD/Core/MCAL/UART/: project.yml
OBD/Core/MCAL/UART/src/: UART.c  UART.h
OBD/Core/MCAL/UART/test/: test_Uart.c
OBD/Core/MCAL/WDT/: project.yml
OBD/Core/MCAL/WDT/src/: WDT.c  WDT.h
OBD/Core/MCAL/WDT/test/: test_Wdt.c
OBD/Core/Middleware/CANTp/: project.yml
OBD/Core/Middleware/CANTp/src/: CANConfig.h  CANTp.c  CANTp.h
OBD/Core/Middleware/CANTp/test/: test_CANTp.c
OBD/Core/Middleware/CAN_ISO_15765/: project.yml
OBD/Core/Middleware/CAN_ISO_15765/src/: CAN_ISO_15765.c  CAN_ISO_15765.h  CAN_ISO_Cnfg.h
OBD/Core/Middleware/CAN_ISO_15765/test/: test_CAN_ISO_15765.c
OBD/Core/Middleware/ISO_Uart_Protocols/: project.yml
OBD/Core/Middleware/ISO_Uart_Protocols/src/: ISO_Uart_MCAL_Interface.c  ISO_Uart_MCAL_Interface.h  ISO_Uart_Protocols.c  ISO_Uart_Protocols.h
OBD/Core/Middleware/ISO_Uart_Protocols/test/: test_ISOUart.c
OBD/Core/Middleware/MemMangEeprom/src/: MemManager.c  MemManager.h
OBD/Core/Middleware/OBDIIHandler/: project.yml
OBD/Core/Middleware/OBDIIHandler/src/: OBDIIHandler.c  OBDIIHandler.h
OBD/Core/Middleware/OBDIIHandler/test/: test_OBDIIHandler.c
OBD/Core/Middleware/PWM_Commander/: project.yml
OBD/Core/Middleware/PWM_Commander/src/: PwmCommander.c  PwmCommander.h  PwmCommanderTestFile.txt
OBD/Core/Middleware/PWM_Commander/test/: test_PWMCommander.c
OBD/Core/Middleware/UDSHandler/: project.yml
OBD/Core/Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
OBD/Core/StandardFiles/: BitMath.h  StdFile.h  services.c  services.h  typedefs.h
OBD/Drivers/STM32F1xx_HAL_Driver/Src/: stm32f1xx_hal_uart.c
crewspy/Crewspy_lib/: CMakeLists.txt  CrewTeQ_Spy.ioc  README.md
crewspy/Crewspy_lib/.github/ISSUE_TEMPLATE/: bug_report.md
crewspy/Crewspy_lib/Core/CommonFiles/: Address.h  BitMath.h  BuildOptions.h  GlobalCnfg.h  ProjectConfigurations.h  UserConfigurations.c
secondTrySTM32/: .cproject  .mxproject  .project  ACCU3.ioc  CMakeLists.txt
secondTrySTM32/Core/Inc/: appStart_control.h  commonMacros.h  hardwarePortInit.h  lcd16.h  main.h  standards.h  temperature_sensor.h
secondTrySTM32/Core/Src/: appStart_control.c  hardwarePortInit.c  lcd16.c  main.c  stm32f1xx_hal_msp.c  temperature_sensor.c
secondTrySTM32/Debug/: ACCU3.elf  ACCU3.list  ACCU3.map  makefile
secondTrySTM32/Debug/Core/Src/: main.su  stm32f1xx_hal_msp.su
(+2426 files in other folders)
